--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,12 @@
-version: '2'
+version: '3'
 
 services:
-  proxy:
-    build: nginx/
-    container_name: "portainer-proxy"
-    ports:
-      - "80:80"
-    networks:
-      - local
-
-  templates:
-    image: portainer/templates
-    container_name: "portainer-templates"
-    networks:
-      - local
-
   portainer:
     image: portainer/portainer
-    container_name: "portainer-app"
-    command: --templates http://templates/templates.json
-    networks:
-      - local
+    container_name: "portainer"
+    restart: always
+    ports:
+      - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /opt/portainer/data:/data
-
-  watchtower:
-    image: centurylink/watchtower
-    container_name: "portainer-watchtower"
-    command: --cleanup portainer-app
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
-networks:
-  local:
-    driver: bridge
+      - /home/ubuntu/portainer/data:/data
